<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GGC GPA Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gpa">Enter your current GPA:</string>
    <string name="credit_hours">Enter your total credit hours before this semester:</string>
    <string name="next">Next</string>
    <string name="class_one">Enter the information for class 1:</string>
    <string name="hint_hours">Credit Hours</string>
    <string name="hint_grade">Grade</string>
    <string name="class_two">Enter the information for class 2:</string>
    <string name="class_three">Enter the information for class 3:</string>
    <string name="class_four">Enter the information for class 4:</string>
    <string name="submit">Submit</string>

</resources>
