<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    //Class 1
    <TextView
            android:id="@+id/text_class_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/class_one" />
    <EditText
            android:id="@+id/input_class_one_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_class_one"
            android:hint="@string/hint_hours"
            android:inputType="numberDecimal"/>
    <EditText
            android:id="@+id/input_class_one_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_class_one_hours"
            android:layout_alignBaseline="@id/input_class_one_hours"
            android:hint="@string/hint_grade"
            android:inputType="numberDecimal"/>

    //Class 2
    <TextView
            android:id="@+id/text_class_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@id/input_class_one_hours"
            android:text="@string/class_two"/>
    <EditText
            android:id="@+id/input_class_two_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_class_two"
            android:hint="@string/hint_hours"
            android:inputType="numberDecimal"/>
    <EditText
            android:id="@+id/input_class_two_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_class_two_hours"
            android:layout_alignBaseline="@id/input_class_two_hours"
            android:hint="@string/hint_grade"
            android:inputType="numberDecimal"/>

    //Class 3
    <TextView
            android:id="@+id/text_class_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@id/input_class_two_hours"
            android:text="@string/class_three" />
    <EditText
            android:id="@+id/input_class_three_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_class_three"
            android:hint="@string/hint_hours"
            android:inputType="numberDecimal"/>
    <EditText
            android:id="@+id/input_class_three_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_class_three_hours"
            android:layout_alignBaseline="@id/input_class_three_hours"
            android:hint="@string/hint_grade"
            android:inputType="numberDecimal"/>

    //Class 4
    <TextView
            android:id="@+id/text_class_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@id/input_class_three_hours"
            android:text="@string/class_four" />
    <EditText
            android:id="@+id/input_class_four_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_class_four"
            android:hint="@string/hint_hours"
            android:inputType="numberDecimal"/>
    <EditText
            android:id="@+id/input_class_four_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/input_class_four_hours"
            android:layout_alignBaseline="@id/input_class_four_hours"
            android:hint="@string/hint_grade"
            android:inputType="numberDecimal"/>

    //Submit Button
    <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_class_four_hours"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/submit"/>

    //New GPA
    <TextView
            android:id="@+id/text_new_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_submit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>


</RelativeLayout>